# irregular_bot

./: .gitignore  README.md  docker-compose.yml  my_db_v17.dump  pyproject.toml
.github/workflows/: deploy.yml
migrations/: env.py  settings.py
migrations/versions/: 12f81ce65dde_create_game_schema.py  1c24fa128f0b_initial_revision.py  925f31cbfd9e_create_schemas.py  caad856cc7f7_create_tg_user_tg_admin_tables.py  d281bad4966c_create_eng_irregular_verb_table.py  ee3d3cbba0ee_create_game_irregular_verb__game_score_.py
services/infrastructure/database/: base_model.py
services/shared/database/: base_repository.py  pg_connector.py
services/tg_bot/: Dockerfile  main.py
services/tg_bot/src/: container.py  main.py
services/tg_bot/src/config/: settings.py
services/tg_bot/src/domain/: admin.py  irregular_game.py  user.py  verb.py
services/tg_bot/src/infrastructure/db/sqlalchemy/: game.py  user.py  verbs.py
services/tg_bot/src/infrastructure/repositories/: game_repository.py  user_repository.py  verb_repository.py
services/tg_bot/src/infrastructure/telegram/handlers/: main_handler.py
services/tg_bot/src/infrastructure/telegram/keyboards/: main_keyboard.py
